--- a/index.css
+++ b/index.css
@@ -23,14 +23,14 @@ button{
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 5px;
-    border: 2px solid rgba(0,0,0,0.3);
+    border: 2px solid rgba(238, 237, 233, 0.3);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    color: rgb(193, 194, 129);
-    background-color: rgb(72, 97, 129);
+    color: rgb(150, 173, 235);
+    background-color: rgb(22, 28, 61);
 }
 
 button:hover{
-    background-color: rgb(35, 48, 75);
+    background-color: rgb(102, 127, 180);
 }
 
 .container{
@@ -38,10 +38,10 @@ button:hover{
     margin: auto;
 }
 
-.color-acento{ color:blueviolet; }
+.color-acento{ color:rgb(77, 109, 179); }
 
 header{
-    background-color: rgb(245,245,245);
+    background-color: rgb(48, 64, 78);
     
 }
 
@@ -49,8 +49,8 @@ header .logo{
     margin: 0;
     padding: 25px 30px;
     font-weight: bold;
-    color: blueviolet;
-    font-size: 1.6em;
+    color: rgb(243, 200, 106);
+    font-size: 1.8em;
 }
 
 header .container{
@@ -70,7 +70,7 @@ header a{
     padding: 5px 12px;
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: rgb(243, 200, 106);
 }
 
 header a:hover{
@@ -108,11 +108,17 @@ header a:hover{
     text-align: center;
     padding: 200px 12px;
 }
-
-#nuestros-programas{
-    background-color: rgb(30,30,30);
-    color: white;
+#somos-proya2 .container{
     text-align: center;
+    padding: 200px 12px;
+    
+}
+
+#nuestros-programas {
+    background-color: rgb(30,30,30);
+    color: rgb(253, 244, 208);
+    text-align: center;
+   
 }
 
 #nuestros-programas .container{
@@ -136,13 +142,13 @@ header a:hover{
     border-radius: 15px;
 }
 
-.carta:nth-child(1){
+.carta:first-child{
     background-image: linear-gradient(
         0deg,
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("full-stack-cropped.jpg");
+    ,url("https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/LaTeX_logo.svg/1280px-LaTeX_logo.svg.png");
 
 }
 
@@ -152,7 +158,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("latex.jpg");
+    ,url("https://prod-discovery.edx-cdn.org/media/course/image/275d9821-0a54-4f63-bcb0-7f849293353b-4d281850fb52.small.png");
 }
 
 .carta:nth-child(3){
@@ -161,7 +167,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("tele.jpg");
+    ,url("https://www.tokioschool.com/wp-content/uploads/2020/10/redes-cisco.jpg");
 
 }
 
@@ -182,7 +188,7 @@ header a:hover{
     align-items: center;
     text-align: center;
     background-color: rgb(30,30,30);
-    color: white;
+    color: rgb(244, 255, 95);
     height: 80vh;
 }
 
@@ -195,7 +201,7 @@ header a:hover{
 }
 
 footer{
-    background-color: rgb(230,230,230);
+    background-color: rgb(235, 231, 181);
 }
 
 footer p{
@@ -284,23 +290,26 @@ footer .container{
         width: 300px; 
     }
     #nuestros-programas .programas{
-        display: flex;
+        display:flex;
         justify-content: center;
+
     }
 
     #nuestros-programas p{
-        display: block;
-        margin-bottom: 30px;
+        display:block;
+        margin-bottom: 40px;
+       
     }
 
     #nuestros-programas h2{
         font-size: 4em;
+       
     }
 
     #nuestros-programas h3{
-        margin-top: 0;
+        margin-top:-20px;
+       
     }
-
     #nuestros-programas .carta{
         padding: 50px;
         background-size: 100% 150px;
@@ -316,7 +325,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("latex.jpg");
+        ,url("https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/LaTeX_logo.svg/1280px-LaTeX_logo.svg.png");
 
     }
 
@@ -326,7 +335,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("full-stack-cropped.jpg");
+        ,url("https://prod-discovery.edx-cdn.org/media/course/image/275d9821-0a54-4f63-bcb0-7f849293353b-4d281850fb52.small.png");
     }
 
     .carta:nth-child(3){
@@ -335,15 +344,15 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("tele.jpg");
+        ,url("https://www.tokioschool.com/wp-content/uploads/2020/10/redes-cisco.jpg");
 
     }
 
     #caracteristicas{
-        background-image: url("background-2.jpeg");
+        background-image: url("https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU=w240-h480-rw");
         background-repeat: no-repeat;
-        background-size: 500px 400px;
-        background-position: calc(100vw - 500px) 120px;
+        background-size: 50px 40px;
+        background-position: calc(50vw - 100px) 200px;
     }
 
     #caracteristicas .container{
