--- a/index.css
+++ b/index.css
@@ -118,6 +118,8 @@ header a:hover{
     background-color: rgb(30,30,30);
     color: rgb(253, 244, 208);
     text-align: center;
+    padding: 0cm;
+    margin:0em;
    
 }
 
