--- a/index.css
+++ b/index.css
@@ -36,11 +36,15 @@ button:hover{
 
 .container{
     
-    max-width: max-content;
+    
     margin: auto;
 }
 
-.color-acento{ color:rgb(77, 109, 179); }
+.color-acento{ 
+    max-width: max-content;
+
+    color:rgb(77, 109, 179);
+ }
 
 header{
     background-color: rgb(48, 64, 78);
