--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
 
 html{
     scroll-behavior: smooth;
-    box-sizing: border-box;
 }
 
 body{
@@ -42,11 +41,11 @@ button:hover{
 
 .color-acento{ 
     max-width: max-content;
-
     color:rgb(77, 109, 179);
  }
 
 header{
+    max-width: max-content;
     background-color: rgb(48, 64, 78);
     display: flex;
 }
