--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    
 }
 
 html{
@@ -9,7 +10,7 @@ html{
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    max-width: 100%;
+    width: 100%;
 }
 
 h1{ font-size: 3.5em;}
@@ -145,6 +146,7 @@ header a:hover{
     align-items: center;
     height: 40vh;
     width: 60vh;
+    max-width:100%; 
     
         display: block;
         margin-left: auto;
@@ -230,6 +232,7 @@ header a:hover{
 }
 
 #final{
+    max-width:100%; 
     display: flex;
     flex-direction: column;
     justify-content: center;
